--- a/implementations/server/package.json
+++ b/implementations/server/package.json
@@ -1,16 +1,26 @@
 {
   "name": "implementations",
   "engines": {
-    "node": "18.12.0"
+    "node": "20.3.0"
   },
   "type": "module",
   "version": "1.0.0",
   "description": "Node.js performance",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/http-server.js",
+    "lint": "eslint . --ext js,ts"
   },
   "keywords": [],
   "author": "Marcos Renan Krul <marcoskrul2k@gmail.com> & Renato Cristiano Ruppel <heruppel2@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import-helpers": "^1.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
+  }
 }
