--- a/implementations/server/package.json
+++ b/implementations/server/package.json
@@ -22,5 +22,9 @@
     "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5"
+  },
+  "dependencies": {
+    "byte-size": "^8.1.1",
+    "csvtojson": "^2.0.10"
   }
 }
