--- a/implementations/server/.eslintrc.json
+++ b/implementations/server/.eslintrc.json
@@ -21,6 +21,10 @@
     "eslint-plugin-import-helpers"
   ],
   "rules": {
+    "no-unused-vars": [
+      "warn",
+      { "argsIgnorePattern": "_",  "varsIgnorePattern": "_" }
+    ],
     "no-nested-ternary": "off",
     "no-param-reassign": "off",
     "operator-assignment": "off",
