--- a/implementations/server/package.json
+++ b/implementations/server/package.json
@@ -10,7 +10,10 @@
   "scripts": {
     "dev:sync": "node --watch src/http-server-sync.js",
     "dev:async": "node --watch src/http-server-async.js",
-    "lint": "eslint . --ext js,ts"
+    "exec:sync": "scripts/exec.sh 3001",
+    "exec:async": "scripts/exec.sh 3000",
+    "lint": "eslint . --ext js,ts",
+    "restart": "./scripts/restart.sh"
   },
   "keywords": [],
   "author": "Marcos Renan Krul <marcoskrul2k@gmail.com> & Renato Cristiano Ruppel <heruppel2@gmail.com>",
