--- a/implementations/server/package.json
+++ b/implementations/server/package.json
@@ -10,11 +10,13 @@
   "scripts": {
     "dev:sync": "node --watch src/http-server-sync.js",
     "dev:async": "node --watch src/http-server-async.js",
+    "dev:async:cluster": "node --watch src/http-server-async-cluster.js",
     "exec:sync": "scripts/exec.sh 3001",
     "exec:async": "scripts/exec.sh 3000",
     "lint": "eslint . --ext js,ts",
     "restart": "./scripts/restart.sh",
     "start": "./scripts/start.sh",
+    "del": "./scripts/del.sh",
     "split": "node src/split-file.js"
   },
   "keywords": [],
