--- a/implementations/server/package.json
+++ b/implementations/server/package.json
@@ -37,6 +37,6 @@
   "dependencies": {
     "byte-size": "^8.1.1",
     "csvtojson": "^2.0.10",
-    "tx2": "^1.0.5"
+    "date-fns": "^2.30.0"
   }
 }
