--- a/implementations/server/package.json
+++ b/implementations/server/package.json
@@ -16,11 +16,15 @@
     "start:async:cluster": "pm2 start --name async-c src/http-server-async-cluster.js",
     "exec:sync": "scripts/exec.sh 3001",
     "exec:async": "scripts/exec.sh 3000",
+    "exec:async:cluster": "scripts/exec.sh 3002",
     "lint": "eslint . --ext js,ts",
     "restart": "./scripts/restart.sh",
     "start": "./scripts/start.sh",
     "del": "./scripts/del.sh",
-    "split": "node src/split-file.js"
+    "split": "node src/split-file.js",
+    "test:sync": "./scripts/run.sh 3001",
+    "test:async": "./scripts/run.sh 3000",
+    "test:async:cluster": "./scripts/run.sh 3002"
   },
   "keywords": [],
   "author": "Marcos Renan Krul <marcoskrul2k@gmail.com> & Renato Cristiano Ruppel <heruppel2@gmail.com>",
