Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/implementations/server/package.json
+++ b/implementations/server/package.json
@@ -11,9 +11,9 @@
     "dev:sync": "node --watch src/http-server-sync.js",
     "dev:async": "node --watch src/http-server-async.js",
     "dev:async:cluster": "node --watch src/http-server-async-cluster.js",
-    "start:sync": "pm2 start --name sync src/http-server-sync.js",
-    "start:async": "pm2 start --name async src/http-server-async.js",
-    "start:async:cluster": "pm2 start --name async-c src/http-server-async-cluster.js",
+    "start:sync": "./scripts/monit-single-thread.sh sync",
+    "start:async": "./scripts/monit-single-thread.sh async",
+    "start:async:cluster": "./scripts/monit-multi-threads.sh async-cluster",
     "exec:sync": "scripts/exec.sh 3000",
     "exec:async": "scripts/exec.sh 3001",
     "exec:async:cluster": "scripts/exec.sh 3002",
@@ -22,9 +22,9 @@
     "start": "./scripts/start.sh",
     "del": "./scripts/del.sh",
     "split": "node src/split-file.js",
-    "test:sync": "./scripts/run.sh 3000 sync",
-    "test:async": "./scripts/run.sh 3001 async",
-    "test:async:cluster": "./scripts/run.sh 3002 async-cluster"
+    "test:sync": "./scripts/run.sh 3000 sync singleThread",
+    "test:async": "./scripts/run.sh 3001 async singleThread",
+    "test:async:cluster": "./scripts/run.sh 3002 async-cluster multiThreads"
   },
   "keywords": [],
   "author": "Marcos Renan Krul <marcoskrul2k@gmail.com> & Renato Cristiano Ruppel <heruppel2@gmail.com>",
